View Issue Details

IDProjectCategoryView StatusLast Update
0031380Open CASCADEOCCT:Foundation Classespublic2020-10-08 11:02
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionwon't fix 
Product Version6.5.4 
Summary0031380: Foundation Classes - NCollection_Array1 does not define DEFINE_STANDARD_ALLOC
DescriptionUnlike other NCollection classes, NCollection_Array1 does not use neither NCollection_BaseAllocator nor Standard::Allocate()/Standard::Free() for memory allocations.
This potentially could lead to allocate/free mismatch.
TagsNo tags attached.
Test case number

Activities

git

2020-09-18 09:03

administrator   ~0095006

Branch CR31380 has been created by abv.

SHA-1: e7d67f89c76402ae3d39cd946d9295b13f471959


Detailed log of new commits:

Author: abv
Date: Fri Sep 18 09:05:57 2020 +0300

    0031380: Foundation Classes - NCollection_Array1 does not define DEFINE_STANDARD_ALLOC
    
    DEFINE_STANDARD_ALLOC is added to definition of NCollection_Array1 and NCollection_Array2 template classes

abv

2020-09-18 11:37

manager   ~0095019

The patch has been made and tested successfully...

However there is a question whether adding OCCT-specific new and delete operations has any practical sense for array classes. These classes are expected to be created as either local variables or by aggregation (class fields etc.), rather than allocated dynamically using new or delete. I can harly imagine any practical case when such operators will be involved at all. And even if this happens, the difference between OCCT and standard new and delete should be noticeable only in non-standard settings, like if MMGT_OPT is defined. The combination seems to be rather improbable..

Thus I prefer not to do this change, as useless.

kgv

2020-09-18 11:47

developer   ~0095021

Please close the issue.

git

2020-10-08 11:02

administrator   ~0095812

Branch CR31380 has been deleted by inv.

SHA-1: e7d67f89c76402ae3d39cd946d9295b13f471959

Issue History

Date Modified Username Field Change
2020-02-18 09:28 kgv New Issue
2020-02-18 09:28 kgv Assigned To => abv
2020-02-18 09:28 kgv Description Updated
2020-09-18 09:03 git Note Added: 0095006
2020-09-18 11:37 abv Note Added: 0095019
2020-09-18 11:37 abv Assigned To abv => kgv
2020-09-18 11:37 abv Status new => feedback
2020-09-18 11:47 kgv Note Added: 0095021
2020-09-18 11:47 kgv Assigned To kgv => bugmaster
2020-09-18 11:47 kgv Resolution open => won't fix
2020-09-18 14:48 bugmaster Status feedback => closed
2020-09-19 14:39 abv Target Version 7.5.0 =>
2020-10-08 11:02 git Note Added: 0095812