0031380: Foundation Classes - NCollection_Array1 does not define DEFINE_STANDARD_ALLOC

DEFINE_STANDARD_ALLOC is added to definition of NCollection_Array1 and NCollection_Array2 template classes